# wovo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  styles.css  ui_config.toml  wovo-settings.schema.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
scripts/: build-css.mjs  bump-version.mjs  generate-release-notes.mjs  trunk.mjs  validate-release-version.mjs  validate-updater-signing-secrets.mjs
src/: app.rs  app_context.rs  auto_switch_runway.rs  codex_api.rs  cost_usage_view.rs  formatting.rs  main.rs  request_epoch.rs  resize_guard.rs  tauri_bridge.js  theme.rs
src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_commands.rs  app_runtime.rs  app_updates.rs  auto_switch.rs  config_validation.rs  error.rs  lib.rs  main.rs  notifications.rs  provider.rs  provider_state.rs  settings_commands.rs  snapshot.rs  tray.rs  usage_commands.rs
src-tauri/src/account_commands/: account_summaries.rs  identity_resolver.rs  live_account_importer.rs  tests.rs
src-tauri/src/account_commands/tests/: identity.rs  live_import.rs  summaries.rs  system_account.rs
src-tauri/src/auto_switch/: tests.rs
src-tauri/src/claude/: account_commands.rs  account_store.rs  auth_store.rs  cost_usage.rs  login_runner.rs  mod.rs  quota_events.rs  settings.rs  snapshot.rs  snapshot_cache.rs  token_refresh.rs  usage_commands.rs  usage_fetcher.rs
src-tauri/src/claude/cost_usage/: pricing.rs
src-tauri/src/codex/: account_store.rs  atomic_file.rs  auth_store.rs  cost_usage.rs  login_runner.rs  mod.rs  quota_events.rs  runtime.rs  settings.rs  snapshot_cache.rs  token_refresh.rs  usage_fetcher.rs  workspace_resolver.rs
src-tauri/src/codex/account_store/: fs_ops.rs  identity.rs  tests.rs
src-tauri/src/codex/cost_usage/: pricing.rs  tests.rs
src-tauri/src/domain/: account.rs  mod.rs  usage.rs
src-tauri/src/notifications/: tests.rs
src-tauri/src/usage_commands/: tests.rs
src/app_actions/: accounts.rs  mod.rs  notifications.rs  settings.rs  snapshot.rs  updates.rs
src/components/: account_card.rs  cost_summary.rs  (+6 more)
style/: tailwind.css
(+15 files in other folders)
