[package]
name = "wovo-ui"
version = "0.1.1"
description = "Leptos frontend for the WoVo desktop app"
authors = ["WoVo contributors"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
icons = { version = "0.18.2", features = ["leptos"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "DomRect", "DomTokenList", "Element", "Event", "EventTarget", "HtmlDivElement", "ResizeObserver", "Window"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_ui = "0.3.22"
tw_merge = "0.1.21"
strum = { version = "0.28.0", features = ["derive"] }
send_wrapper = "0.6"

[workspace]
members = ["src-tauri"]
