[package]
name = "wovo"
version = "0.1.0"
description = "Desktop usage dashboard for Codex accounts"
authors = ["WoVo contributors"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wovo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
directories = "6"
base64 = "0.22"
tokio = { version = "1", features = ["io-util", "process", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
tauri-plugin-updater = "2"
